apps/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:2.3.0
        ports:
          - containerPort: 7878

        volumeMounts:
          - mountPath: /config
            name: prowlarr-pv-config
      restartPolicy: Always

      volumes:
        - name: prowlarr-pv-config
          persistentVolumeClaim:
            claimName: prowlarr-pv-config
